Init: Added AzerothCore-Bot repo as a submodule.

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@ conf/*
 apps/drassil/*
 env/dist/*
 env/user/*
+!modules/
 modules/*
+!modules/AzerothCore-Bot
 !modules/*.md
 !modules/*.sh
 build*/
